infrastructure/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    rules:
        - host: ticketing.local
          http:
              paths:
                  - path: /api/auth/sign-up
                    backend:
                        serviceName: auth-clusterip-srv
                        servicePort: 4000
                  - path: /api/auth/log-in
                    backend:
                        serviceName: auth-clusterip-srv
                        servicePort: 4000
                  - path: /api/auth/log-out
                    backend:
                        serviceName: auth-clusterip-srv
                        servicePort: 4000
                  - path: /api/auth/current-user
                    backend:
                        serviceName: auth-clusterip-srv
                        servicePort: 4000
                  - path: /.*
                    backend:
                      serviceName: client-clusterip-srv
                      servicePort: 3000
